--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1"
+  },
+  "dependencies": {
+    "arcball_camera": "^1.0.1",
+    "ez_canvas_controller": "^1.0.0",
+    "gl-matrix": "^3.4.3",
+    "jszip": "^3.9.1"
   }
 }
